--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,10 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-use-before-define": "off",
-    "@typescript-eslint/no-inferrable-types": "off"
+    "@typescript-eslint/no-inferrable-types": "off",
+    "@typescript-eslint/no-unused-vars": ["error",{
+      "varsIgnorePattern": "DiscordComponents|_"
+    }]
   },
   "overrides": [
     {
