--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: VaultVulp/gp-docker-action@1.5.2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }} # Provide GITHUB_TOKEN to login into the GitHub Packages
-          image-name: ghcr.io/eyyy-nora/vreiheit-discord-bot # Provide only Docker image name, tag will be automatically set to latest
+          image-name: vreiheit-discord-bot # Provide only Docker image name, tag will be automatically set to latest
           image-tag: ${{ github.sha }}
           additional-image-tags: latest
           custom-args: |
