--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -13,16 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - uses: VaultVulp/gp-docker-action@1.5.2
+      - uses: azure/docker-login@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }} # Provide GITHUB_TOKEN to login into the GitHub Packages
-          image-name: vreiheit-discord-bot # Provide only Docker image name, tag will be automatically set to latest
-          image-tag: ${{ github.sha }}
-          additional-image-tags: latest
-          custom-args: |
-            --build-arg=DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}"
-            --build-arg=DISCORD_CLIENT_ID="${{ secrets.DISCORD_CLIENT_ID }}"
-            --build-arg=DISCORD_CLIENT_SECRET="${{ secrets.DISCORD_CLIENT_SECRET }}"
+          login-server: ghcr.io
+          username: ${{ secrets.GITHUB_USERNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          docker build . -t ghcr.io/eyyy-nora/vreiheit-bot:${{ github.sha }} --build-arg=DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" --build-arg=DISCORD_CLIENT_ID="${{ secrets.DISCORD_CLIENT_ID }}" --build-arg=DISCORD_CLIENT_SECRET="${{ secrets.DISCORD_CLIENT_SECRET }}"
+          docker push ghcr.io/eyyy-nora/vreiheit-bot:${{ github.sha }}
       - uses: azure/setup-kubectl@v3
       - uses: azure/k8s-set-context@v1
         with:
