fix: disable pull images of k8s-deploy

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -40,6 +40,7 @@ jobs:
           strategy: basic
           manifests: |
             manifests/deployment.yml
+          pull-images: false
           images: |
             ghcr.io/${{ secrets.GH_USERNAME }}/vreiheit-discord-bot:${{ github.sha }}
           imagepullsecrets: |
