--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -41,6 +41,7 @@ jobs:
           manifests: |
             manifests/deployment.yml
           pull-images: false
+          force: true
           images: |
             ghcr.io/${{ secrets.GH_USERNAME }}/vreiheit-discord-bot:${{ github.sha }}
           imagepullsecrets: |
