--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
         - name: vreiheit-discord-bot
-          image: ghcr.io/eyyy-nora/vreiheit-bot:latest
+          image: ghcr.io/eyyy-nora/vreiheit-bot
