fix: image name mismatch

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -41,9 +41,7 @@ jobs:
           manifests: |
             manifests/deployment.yml
           pull-images: false
-          force: true
           images: |
-            ghcr.io/${{ secrets.GH_USERNAME }}/vreiheit-discord-bot:${{ github.sha }}
-            ghcr.io/${{ secrets.GH_USERNAME }}/vreiheit-discord-bot:${{ github.sha }}
+            ghcr.io/${{ secrets.GH_USERNAME }}/vreiheit-bot:${{ github.sha }}
           imagepullsecrets: |
             gh-registry-secret
