--- a/manifests/vh-configmap.yml
+++ b/manifests/vh-configmap.yml
@@ -2,7 +2,9 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: vreiheit-postgres-config
-  namespace: default
 data:
-  key: default
+  POSTGRES_DB: vreiheit
+  POSTGRES_USER: vreiheit-postgres-user
+  POSTGRES_PASSWORD: vreiheit-postgres-password
+  PGDATA: /var/lib/postgresql/data
   
