--- a/manifests/postgres-deployment.yml
+++ b/manifests/postgres-deployment.yml
@@ -25,7 +25,7 @@ spec:
             - containerPort: 5324
           env:
             - name: POSTGRES_USER
-              valueForm:
+              valueFrom:
                 secretKeyRef:
                   name: vreiheit-postgres
                   key: username
