--- a/manifests/persistent-volume.yml
+++ b/manifests/persistent-volume.yml
@@ -6,7 +6,7 @@ metadata:
     app: vreiheit
     ver: postgres-pv
 spec:
-  storageClassName: "Local"
+  storageClassName: ""
   capacity:
     storage: 10Gi
   accessModes:
