--- a/manifests/persistent-volume.yml
+++ b/manifests/persistent-volume.yml
@@ -15,3 +15,10 @@ spec:
   storageClassName: local-storage
   local:
     path: /opt/vreiheit/data
+  nodeAffinity:
+    nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+            - propero.dev
