fix: help me :))))))))))

--- a/manifests/discord-bot-deployment.yml
+++ b/manifests/discord-bot-deployment.yml
@@ -39,4 +39,4 @@ spec:
             - name: POSTGRES_HOST
               value: vreiheit-postgres-service
             - name: POSTGRES_PORT
-              value: 5432
+              value: "5432"
