--- a/manifests/persistent-volume.yml
+++ b/manifests/persistent-volume.yml
@@ -7,7 +7,7 @@ metadata:
     ver: postgres-pv
 spec:
   capacity:
-    storage: 10Gi
+    storage: "10Gi"
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
