--- a/manifests/vh-postgres-deployment.yml
+++ b/manifests/vh-postgres-deployment.yml
@@ -15,24 +15,28 @@ spec:
         app: vreiheit-postgres
     spec:
       containers:
-        - name: vreiheit-pg
-          image: postgres:15
-          resources:
+      - name: vreiheit-pg
+        image: postgres:15
+        resources:
           requests:
             cpu: 600m
             memory: 512Mi
           limits:
             cpu: 1500m
             memory: 8Gi
-          ports:
-            - containerPort: 5324
-          envFrom:
-            - configMapRef:
-                name: vreiheit-postgres-config
-          volumeMounts:
-            - mountPath: /var/lib/postgresql/data
-              name: pgdatavol
+        ports:
+        - containerPort: 5324
+        envFrom:
+        - configMapRef:
+            name: vreiheit-postgres-config
+        - secretRef:
+            name: vreiheit-postgres-user
+        - secretRef:
+            name: vreiheit-postgres-password
+        volumeMounts:
+        - mountPath: /var/lib/postgresql/data
+          name: pgdatavol
     volumes:
-      - name: pgdatavol
-        persistentVolumeClaim:
-          claimName: vreiheit-postgres-pvc
+    - name: pgdatavol
+      persistentVolumeClaim:
+        claimName: vreiheit-postgres-pvc
