--- a/manifests/vh-discord-bot-deployment.yml
+++ b/manifests/vh-discord-bot-deployment.yml
@@ -3,17 +3,27 @@ kind: Deployment
 metadata:
   name: vreiheit-discord-bot-deployment
   labels:
-    app: vreiheit-discord-bot
+    app: vreiheit
+    type: discord-bot-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: vreiheit-discord-bot
+      app: vreiheit
+      type: discord-bot-deployment
   template:
     metadata:
       labels:
-        app: vreiheit-discord-bot
+        app: vreiheit
+        type: discord-bot-deployment
     spec:
       containers:
-        - name: vreiheit-discord-bot
-          image: ghcr.io/eyyy-nora/vreiheit-bot
+      - name: vreiheit-discord-bot
+        image: ghcr.io/eyyy-nora/vreiheit-bot
+        envFrom:
+        - configMapRef:
+            name: vreiheit-postgres-config
+        - secretRef:
+            name: vreiheit-postgres-user
+        - secretRef:
+            name: vreiheit-postgres-password
