--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "diff": "^5.1.0",
     "discord.js": "^14.7.1",
     "discord.tsx": "^3.0.0",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
+    "text-diff": "^1.0.1",
     "typeorm": "^0.3.11"
   }
 }
