fix: pod time zone

--- a/manifests/discord-bot-deployment.yml
+++ b/manifests/discord-bot-deployment.yml
@@ -40,3 +40,5 @@ spec:
               value: vreiheit-postgres-service
             - name: POSTGRES_PORT
               value: "5432"
+            - name: TZ
+              value: "Europe/Berlin"
