feat: jsx refactor, start work managed message service

--- a/apps/website/.eslintrc
+++ b/apps/website/.eslintrc
@@ -3,5 +3,10 @@
   "root": true,
   "rules": {
     "no-console": "off"
-  }
+  },
+  "ignorePatterns": [
+    "node_modules",
+    "dist",
+    "*.css"
+  ]
 }
