--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
+    "dev:ts": "ts-node -r tsconfig-paths/register src/main.ts",
     "start": "node dist/main.js",
     "lint": "eslint --ext .ts,.tsx",
     "lint:fix": "eslint --fix --ext .ts,.tsx"
@@ -13,6 +14,8 @@
     "@types/node": "^18.15.3",
     "@vreiheit/eslint-config": "workspace:^",
     "eslint": "^8.36.0",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "tslib": "^2.5.0",
     "tsup": "^6.6.3",
     "typescript": "^5.0.2"
@@ -23,9 +26,14 @@
     "@vreiheit/discord": "workspace:^",
     "@vreiheit/util": "workspace:^",
     "@vreiheit/website": "workspace:^",
+    "axios": "^1.3.4",
+    "connect-typeorm": "^2.0.0",
+    "cookie-parser": "^1.4.6",
     "discord.js": "^14.8.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.10.0",
+    "qs": "^6.11.1",
     "typeorm": "^0.3.12"
   }
 }
