--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@vreiheit/util": "workspace:^",
+    "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
