--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/index.ts",
   "scripts": {
     "build": "tsup",
     "lint": "eslint --ext .ts,.tsx .",
@@ -11,14 +11,20 @@
   },
   "dependencies": {
     "@vreiheit/util": "workspace:^",
-    "typeorm": "^0.3.12",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@vreiheit/eslint-config": "workspace:^",
+    "connect-typeorm": "^2.0.0",
     "eslint": "^8.36.0",
     "tslib": "^2.5.0",
     "tsup": "^6.6.3",
     "typescript": "^5.0.2"
+  },
+  "publishConfig": {
+    "main": "dist/index.js",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts"
   }
 }
