--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vreiheit/util": "workspace:^",
+    "diff": "^5.1.0",
     "discord.js": "^14.8.0"
   },
   "devDependencies": {
@@ -19,5 +20,10 @@
     "tslib": "^2.5.0",
     "tsup": "^6.6.3",
     "typescript": "^5.0.2"
+  },
+  "publishConfig": {
+    "main": "dist/index.js",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts"
   }
 }
