--- a/packages/util/.eslintrc
+++ b/packages/util/.eslintrc
@@ -1,4 +1,8 @@
 {
   "extends": ["@vreiheit/eslint-config"],
-  "root": true
+  "root": true,
+  "ignorePatterns": [
+    "node_modules",
+    "dist"
+  ]
 }
