--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vreiheit/util": "workspace:^",
+    "@propero/easy-api": "^2.1.0",
     "diff": "^5.1.0",
     "discord.js": "^14.8.0"
   },
