--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,6 +27,8 @@
     "@vreiheit/util": "workspace:^",
     "@vreiheit/website": "workspace:^",
     "axios": "^1.3.4",
+    "chart.js": "^3.5.1",
+    "chartjs-node-canvas": "^4.1.6",
     "connect-typeorm": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "discord.js": "^14.8.0",
