--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "types": "dist/index.ts",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "lint": "eslint --ext .ts,.tsx .",
