--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -16,6 +16,19 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Get current version
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
+          script: |
+            const version = require('./.github/determine-version.js')
+            await version(core, context, github)
       - uses: release-drafter/release-drafter@v5
+        with:
+          version: ${{ steps.version.outputs.version}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
