--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -16,18 +16,21 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Get current version
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          hcloud-token: ${{ secrets.HCLOUD_TOKEN }}
           script: |
             const version = require('./.github/determine-version.js')
             await version(core, context, github)
-      - uses: release-drafter/release-drafter@v5
+      - name: Draft release
+        uses: release-drafter/release-drafter@v5
         with:
           version: ${{ steps.version.outputs.version}}
         env:
