--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@maste
+      - uses: actions/checkout@master
       - uses: actions/setup-node@v1
         with:
           node-version: 18
