--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,6 +26,7 @@
     "@vreiheit/discord": "workspace:^",
     "@vreiheit/util": "workspace:^",
     "@vreiheit/website": "workspace:^",
+    "@vreiheit/client": "workspace:^",
     "axios": "^1.3.4",
     "chart.js": "^3.5.1",
     "chartjs-node-canvas": "^4.1.6",
