--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint --ext .ts,.tsx,.html,.htm .",
-    "lint:fix": "eslint --fix --ext .ts,.tsx,.html,.htm ."
+    "build": "vite build"
   },
   "devDependencies": {
     "@fukumong/fantasticon": "^2.1.0",
