--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -2,9 +2,9 @@
   "name": "@vreiheit/website",
   "version": "0.0.0",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "vite dev",
+    "build": "vite build",
+    "start": "vite start"
   },
   "devDependencies": {
     "@fukumong/fantasticon": "^2.1.0",
