feat: add project infrastructure for next
* feat: add project infrastructure for next

* feat: cms route, sidebar

* feat: injection factories and initialisation options (#30)

* feat: add project infrastructure for next

* feat: translations, working injection

* feat: withInit decorator enhancement

* ci adj

---------

Co-authored-by: Christian Klemm <git@klemm.one>

--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -2,8 +2,9 @@
   "name": "@vreiheit/website",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "vite dev",
+    "build": "vite build",
+    "start": "vite start"
   },
   "devDependencies": {
     "@fukumong/fantasticon": "^2.1.0",
