feat: add various entities for synchronisation

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'pnpm'
       - name: install dependencies
         run: npm i -g pnpm && pnpm i --ignore-scripts
       - name: lint packages
