feat: schema for discord types, typeorm cli config

--- a/.env
+++ b/.env
@@ -1,9 +1,16 @@
 DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
+DISCORD_SCOPE=identify
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-VREIHEIT_PORT=3000
+VREIHEIT_PORT=3001
+VREIHEIT_HOST=localhost
+VREIHEIT_URL=
+VREIHEIT_SESSION_SECRET=
+VREIHEIT_SESSION_TTL=86400
+TYPEORM_ENTITIES_DIR=src/entities
+TYPEORM_MIGRATIONS_DIR=src/migrations
